RFG 2.0, Gradle 9, Configuration Cache, Java 25 (#60)